[tool.poetry]
name = "gwas-diagram"
version = "0.1.0"
description = "GWAS Catalog Diagram Generation (API)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gwas_diagram"}]

[tool.poetry.dependencies]
python = "^3.11.2"
pandas = "^1.5.3"
gunicorn = "^20.1.0"
flask = "^2.2.3"
flask-restx = "^1.1.0"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
